--- a/m10_01_store-sales_predction.ipynb
+++ b/m10_01_store-sales_predction.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "275120e5",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 0.0 IMPORTS\n"
    ]
@@ -17,6 +19,7 @@
      "end_time": "2022-11-02T14:03:11.737400Z",
      "start_time": "2022-11-02T14:03:09.559881Z"
     },
+    "hidden": true,
     "hide_input": false
    },
    "outputs": [],
@@ -45,7 +48,10 @@
   {
    "cell_type": "markdown",
    "id": "db0c740b",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "## 0.1 HELPER FUNCTIONS"
    ]
@@ -59,7 +65,8 @@
      "end_time": "2022-11-02T14:03:11.756986Z",
      "start_time": "2022-11-02T14:03:11.739227Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -141,7 +148,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:03:13.202006Z",
      "start_time": "2022-11-02T14:03:13.177272Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -181,7 +189,9 @@
   {
    "cell_type": "markdown",
    "id": "5060b5aa",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 0.2 LOAD DATA"
    ]
@@ -194,7 +204,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:03:32.611881Z",
      "start_time": "2022-11-02T14:03:31.767615Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -324,9 +335,7 @@
   {
    "cell_type": "markdown",
    "id": "dcf4a5c7",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 1.0 DATA DESCRIPT"
    ]
@@ -339,8 +348,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:16.846726Z",
      "start_time": "2022-11-01T13:54:16.649266Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -516,9 +524,7 @@
   {
    "cell_type": "markdown",
    "id": "1df9c247",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.1 RENAME COLUMNS\n",
     "\n"
@@ -532,8 +538,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:16.851751Z",
      "start_time": "2022-11-01T13:54:16.848170Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -564,8 +569,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:16.857562Z",
      "start_time": "2022-11-01T13:54:16.853137Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -586,9 +590,7 @@
   {
    "cell_type": "markdown",
    "id": "a35dc7f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.2 DATA DIMENSIONS\n"
    ]
@@ -601,8 +603,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:16.865099Z",
      "start_time": "2022-11-01T13:54:16.860034Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -622,9 +623,7 @@
   {
    "cell_type": "markdown",
    "id": "ef19e9fe",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.3 DATA TYPES\n"
    ]
@@ -637,8 +636,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:16.948366Z",
      "start_time": "2022-11-01T13:54:16.866487Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -678,9 +676,7 @@
   {
    "cell_type": "markdown",
    "id": "9315483f",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.4CHECK NA\n"
    ]
@@ -693,8 +689,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:54:17.369602Z",
      "start_time": "2022-11-01T13:54:16.950462Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -733,9 +728,7 @@
   {
    "cell_type": "markdown",
    "id": "ff175bc8",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.5 FILLOUT NA\n",
     "\n"
@@ -749,8 +742,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:13.422884Z",
      "start_time": "2022-11-01T13:54:17.372878Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -777,9 +769,7 @@
   {
    "cell_type": "markdown",
    "id": "66d760f6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.6 CHANGE TYPES"
    ]
@@ -792,8 +782,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:13.461798Z",
      "start_time": "2022-11-01T13:55:13.424366Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -808,9 +797,7 @@
   {
    "cell_type": "markdown",
    "id": "d1926cc2",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 1.7 DESCRIPTIVE STATISTICAL"
    ]
@@ -823,8 +810,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:13.466046Z",
      "start_time": "2022-11-01T13:55:13.463185Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -836,9 +822,7 @@
   {
    "cell_type": "markdown",
    "id": "55b9d9ef",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### 1.7.1 NUMERICAL ATTRIBUTES"
    ]
@@ -851,8 +835,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:13.956895Z",
      "start_time": "2022-11-01T13:55:13.467531Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1068,8 +1051,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:16.460591Z",
      "start_time": "2022-11-01T13:55:13.958124Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1100,9 +1082,7 @@
   {
    "cell_type": "markdown",
    "id": "f4bb9691",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### 1.7.2 CATEGORICAL ATTRIBUTES"
    ]
@@ -1115,8 +1095,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:16.589560Z",
      "start_time": "2022-11-01T13:55:16.462352Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1148,7 +1127,6 @@
      "end_time": "2022-11-01T13:55:17.606074Z",
      "start_time": "2022-11-01T13:55:16.591359Z"
     },
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1187,9 +1165,7 @@
   {
    "cell_type": "markdown",
    "id": "b2bdbb3e",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 2.0 FEATURE ENGINEERING"
    ]
@@ -1202,8 +1178,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:17.674559Z",
      "start_time": "2022-11-01T13:55:17.608018Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1218,8 +1193,7 @@
      "end_time": "2022-06-15T19:58:12.498153Z",
      "start_time": "2022-06-15T19:58:12.495770Z"
     },
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 2.1 HYPOTHESIS MIND MAP\n"
@@ -1258,8 +1232,7 @@
    "cell_type": "markdown",
    "id": "73486b2f",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 2.2 CREATION OF HYPOTHESES"
@@ -1375,8 +1348,7 @@
    "cell_type": "markdown",
    "id": "aaecab83",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 2.3 FEATURE ENGINEERING"
@@ -1673,8 +1645,7 @@
     "ExecuteTime": {
      "end_time": "2022-06-23T09:39:26.951701Z",
      "start_time": "2022-06-23T09:39:26.949165Z"
-    },
-    "heading_collapsed": true
+    }
    },
    "source": [
     "# 3.0 VARIABLE FILTERING"
@@ -1688,8 +1659,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:55.792362Z",
      "start_time": "2022-11-01T13:55:55.411099Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1699,9 +1669,7 @@
   {
    "cell_type": "markdown",
    "id": "dd1f9b54",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 3.1 ROW SELECTION"
    ]
@@ -1714,8 +1682,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:55.913588Z",
      "start_time": "2022-11-01T13:55:55.797255Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1725,9 +1692,7 @@
   {
    "cell_type": "markdown",
    "id": "a2664dd3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 3.2 COLUMNS SELECTION "
    ]
@@ -1740,8 +1705,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:55.983625Z",
      "start_time": "2022-11-01T13:55:55.915441Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1757,8 +1721,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:55.996805Z",
      "start_time": "2022-11-01T13:55:55.985088Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -1975,9 +1938,7 @@
   {
    "cell_type": "markdown",
    "id": "9558fbcd",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 4.0 EDA - EXPLORATORY DATA ANALYSIS"
    ]
@@ -1990,8 +1951,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:55:56.051515Z",
      "start_time": "2022-11-01T13:55:55.998091Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2006,7 +1966,7 @@
      "end_time": "2022-06-23T14:08:53.435737Z",
      "start_time": "2022-06-23T14:08:53.433071Z"
     },
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 4.1 UNIVARIATE ANALYSIS"
@@ -2167,7 +2127,7 @@
      "end_time": "2022-06-23T14:13:03.651364Z",
      "start_time": "2022-06-23T14:13:03.649139Z"
     },
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 4.2 BIVARIATE ANALYSIS"
@@ -2914,9 +2874,7 @@
     "ExecuteTime": {
      "end_time": "2022-07-17T22:30:43.526156Z",
      "start_time": "2022-07-17T22:30:43.524018Z"
-    },
-    "heading_collapsed": true,
-    "hidden": true
+    }
    },
    "source": [
     "## 4.3 Multivariate analysis"
@@ -2929,11 +2887,10 @@
     "ExecuteTime": {
      "end_time": "2022-07-17T23:45:53.544980Z",
      "start_time": "2022-07-17T23:45:53.542115Z"
-    },
-    "hidden": true
+    }
    },
    "source": [
-    "## 4.3.1 Numerical atributes"
+    "### 4.3.1 Numerical atributes"
    ]
   },
   {
@@ -2944,8 +2901,7 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T13:56:21.883373Z",
      "start_time": "2022-11-01T13:56:20.646806Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -2968,10 +2924,10 @@
    "cell_type": "markdown",
    "id": "90c9e049",
    "metadata": {
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
-    "## 4.3.2 Categorical atributes"
+    "### 4.3.2 Categorical atributes"
    ]
   },
   {
@@ -4215,6 +4171,7 @@
      "end_time": "2022-08-07T13:27:55.758804Z",
      "start_time": "2022-08-07T13:27:55.756571Z"
     },
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -4320,7 +4277,6 @@
    "cell_type": "markdown",
    "id": "46f5d7f5",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -4748,6 +4704,7 @@
      "end_time": "2022-08-10T19:51:56.860321Z",
      "start_time": "2022-08-10T19:51:56.857887Z"
     },
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -4931,6 +4888,7 @@
      "end_time": "2022-08-10T21:30:09.727830Z",
      "start_time": "2022-08-10T21:30:09.725087Z"
     },
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -5888,7 +5846,8 @@
     "ExecuteTime": {
      "end_time": "2022-09-23T12:10:58.575434Z",
      "start_time": "2022-09-23T12:10:58.572761Z"
-    }
+    },
+    "heading_collapsed": true
    },
    "source": [
     "# 10.0 DEPLOY MODEL TO PRODUCTION"
@@ -5901,7 +5860,9 @@
     "ExecuteTime": {
      "end_time": "2022-09-23T12:12:43.715010Z",
      "start_time": "2022-09-23T12:12:43.712671Z"
-    }
+    },
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 10.1 ROSSMAN CLASS"
@@ -5916,7 +5877,8 @@
      "end_time": "2022-11-01T14:12:13.752657Z",
      "start_time": "2022-11-01T14:12:13.722009Z"
     },
-    "code_folding": []
+    "code_folding": [],
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6123,7 +6085,9 @@
   {
    "cell_type": "markdown",
    "id": "452f725e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 10.2 API HANDLER "
    ]
@@ -6136,7 +6100,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T14:12:14.362215Z",
      "start_time": "2022-11-01T14:12:13.755235Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6206,7 +6171,8 @@
     "ExecuteTime": {
      "end_time": "2022-09-23T12:10:58.575434Z",
      "start_time": "2022-09-23T12:10:58.572761Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "## 10.3 API TESTER"
@@ -6220,7 +6186,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:48.697051Z",
      "start_time": "2022-11-02T14:30:48.694779Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6235,7 +6202,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:49.281260Z",
      "start_time": "2022-11-02T14:30:49.261318Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6251,7 +6219,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:50.314879Z",
      "start_time": "2022-11-02T14:30:50.298714Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6275,7 +6244,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:52.080836Z",
      "start_time": "2022-11-02T14:30:52.070761Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6443,7 +6413,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:52.844902Z",
      "start_time": "2022-11-02T14:30:52.839710Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6459,7 +6430,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:55.016195Z",
      "start_time": "2022-11-02T14:30:53.600950Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6490,7 +6462,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:30:56.169162Z",
      "start_time": "2022-11-02T14:30:56.162383Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6505,7 +6478,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:31:03.103254Z",
      "start_time": "2022-11-02T14:31:03.098287Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -6520,7 +6494,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:31:04.424609Z",
      "start_time": "2022-11-02T14:31:04.421385Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6547,7 +6522,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-02T14:31:08.082757Z",
      "start_time": "2022-11-02T14:31:08.070558Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -6787,7 +6763,8 @@
     "ExecuteTime": {
      "end_time": "2022-11-01T18:06:39.424212Z",
      "start_time": "2022-11-01T18:06:39.409362Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": []
@@ -6796,7 +6773,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9e59b93",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -6804,7 +6783,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "64b82fd3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -6812,7 +6793,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d7d4a71",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
